@@ -654,6 +654,7 @@ All (GUI):
 - Add wxTextEntryDialog::SetMaxLength() (derEine).
 - Fix maximum width support in wxGridCellTextEditor (derEine).
 - Add more convenient wxFont(wxFontInfo) ctor.
+- Pass menu events to the handler in the associated wxMenuBar.
 
 wxGTK:
 
